deploy: 678aac8311e6045e447c170a24373b902e0ad397

--- a/index.html
+++ b/index.html
@@ -14385,127 +14385,133 @@ div.jp-OutputPrompt {
 <div class="slides"><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="https://github.com/jupytercon/2020-ClusteringAlgorithms/blob/master/images/slides/Slide1.png?raw=true" alt="center"></p>
+<p><img src="https://github.com/fawazsiddiqi/LnL-CLustering/blob/main/images/slides/Slide1.png?raw=true" alt="center"></p>
 
 </div>
 </div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="https://github.com/jupytercon/2020-ClusteringAlgorithms/blob/master/images/slides/Slide2.png?raw=true" alt="center"></p>
+<p><img src="https://github.com/fawazsiddiqi/LnL-CLustering/blob/main/images/slides/Slide2.png?raw=true" alt="center"></p>
 
 </div>
 </div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="https://github.com/jupytercon/2020-ClusteringAlgorithms/blob/master/images/slides/Slide3.png?raw=true" alt="center"></p>
+<p><img src="https://github.com/fawazsiddiqi/LnL-CLustering/blob/main/images/slides/Slide3.png?raw=true" alt="center"></p>
 
 </div>
 </div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="https://github.com/jupytercon/2020-ClusteringAlgorithms/blob/master/images/slides/Slide4.png?raw=true" alt="center"></p>
+<p><img src="https://github.com/fawazsiddiqi/LnL-CLustering/blob/main/images/slides/Slide4.png?raw=true" alt="center"></p>
 
 </div>
 </div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="https://github.com/jupytercon/2020-ClusteringAlgorithms/blob/master/images/slides/Slide5.png?raw=true" alt="center"></p>
+<p><img src="https://github.com/fawazsiddiqi/LnL-CLustering/blob/main/images/slides/Slide5.png?raw=true" alt="center"></p>
 
 </div>
 </div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="https://github.com/jupytercon/2020-ClusteringAlgorithms/blob/master/images/slides/Slide6.png?raw=true" alt="center"></p>
+<p><img src="https://github.com/fawazsiddiqi/LnL-CLustering/blob/main/images/slides/Slide6.png?raw=true" alt="center"></p>
 
 </div>
 </div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="https://github.com/jupytercon/2020-ClusteringAlgorithms/blob/master/images/slides/Slide7.png?raw=true" alt="center"></p>
+<p><img src="https://github.com/fawazsiddiqi/LnL-CLustering/blob/main/images/slides/Slide7.png?raw=true" alt="center"></p>
 
 </div>
 </div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="https://github.com/jupytercon/2020-ClusteringAlgorithms/blob/master/images/slides/Slide8.png?raw=true" alt="center"></p>
+<p><img src="https://github.com/fawazsiddiqi/LnL-CLustering/blob/main/images/slides/Slide8.png?raw=true" alt="center"></p>
 
 </div>
 </div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="https://github.com/jupytercon/2020-ClusteringAlgorithms/blob/master/images/slides/Slide9.png?raw=true" alt="center"></p>
+<p><img src="https://github.com/fawazsiddiqi/LnL-CLustering/blob/main/images/slides/Slide9.png?raw=true" alt="center"></p>
 
 </div>
 </div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="https://github.com/jupytercon/2020-ClusteringAlgorithms/blob/master/images/slides/Slide10.png?raw=true" alt="center"></p>
+<p><img src="https://github.com/fawazsiddiqi/LnL-CLustering/blob/main/images/slides/Slide10.png?raw=true" alt="center"></p>
 
 </div>
 </div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="https://github.com/jupytercon/2020-ClusteringAlgorithms/blob/master/images/slides/Slide11.png?raw=true" alt="center"></p>
+<p><img src="https://github.com/fawazsiddiqi/LnL-CLustering/blob/main/images/slides/Slide11.png?raw=true" alt="center"></p>
 
 </div>
 </div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="https://github.com/jupytercon/2020-ClusteringAlgorithms/blob/master/images/slides/Slide12.png?raw=true" alt="center"></p>
+<p><img src="https://github.com/fawazsiddiqi/LnL-CLustering/blob/main/images/slides/Slide12.png?raw=true" alt="center"></p>
 
 </div>
 </div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="https://github.com/jupytercon/2020-ClusteringAlgorithms/blob/master/images/slides/Slide13.png?raw=true" alt="center"></p>
+<p><img src="https://github.com/fawazsiddiqi/LnL-CLustering/blob/main/images/slides/Slide13.png?raw=true" alt="center"></p>
 
 </div>
 </div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="https://github.com/jupytercon/2020-ClusteringAlgorithms/blob/master/images/slides/Slide14.png?raw=true" alt="center"></p>
+<p><img src="https://github.com/fawazsiddiqi/LnL-CLustering/blob/main/images/slides/Slide14.png?raw=true" alt="center"></p>
 
 </div>
 </div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="https://github.com/jupytercon/2020-ClusteringAlgorithms/blob/master/images/slides/Slide15.png?raw=true" alt="center"></p>
+<p><img src="https://github.com/fawazsiddiqi/LnL-CLustering/blob/main/images/slides/Slide15.png?raw=true" alt="center"></p>
 
 </div>
 </div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="https://github.com/jupytercon/2020-ClusteringAlgorithms/blob/master/images/slides/Slide16.png?raw=true" alt="center"></p>
+<p><img src="https://github.com/fawazsiddiqi/LnL-CLustering/blob/main/images/slides/Slide16.png?raw=true" alt="center"></p>
 
 </div>
 </div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="https://github.com/jupytercon/2020-ClusteringAlgorithms/blob/master/images/slides/Slide17.png?raw=true" alt="center"></p>
+<p><img src="https://github.com/fawazsiddiqi/LnL-CLustering/blob/main/images/slides/Slide17.png?raw=true" alt="center"></p>
 
 </div>
 </div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="https://github.com/jupytercon/2020-ClusteringAlgorithms/blob/master/images/slides/Slide18.png?raw=true" alt="center"></p>
+<p><img src="https://github.com/fawazsiddiqi/LnL-CLustering/blob/main/images/slides/Slide18.png?raw=true" alt="center"></p>
 
 </div>
 </div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="https://github.com/jupytercon/2020-ClusteringAlgorithms/blob/master/images/slides/Slide19.png?raw=true" alt="center"></p>
+<p><img src="https://github.com/fawazsiddiqi/LnL-CLustering/blob/main/images/slides/Slide19.png?raw=true" alt="center"></p>
 
 </div>
 </div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="https://github.com/jupytercon/2020-ClusteringAlgorithms/blob/master/images/slides/Slide20.png?raw=true" alt="center"></p>
+<p><img src="https://github.com/fawazsiddiqi/LnL-CLustering/blob/main/images/slides/Slide20.png?raw=true" alt="center"></p>
 
 </div>
 </div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="https://github.com/jupytercon/2020-ClusteringAlgorithms/blob/master/images/slides/Slide21.png?raw=true" alt="center"></p>
+<p><img src="https://github.com/fawazsiddiqi/LnL-CLustering/blob/main/images/slides/Slide21.png?raw=true" alt="center"></p>
+
+</div>
+</div></section></section><section><section>
+<div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<p><img src="https://github.com/fawazsiddiqi/LnL-CLustering/blob/main/images/slides/Slide22.png?raw=true" alt="center"></p>
 
 </div>
 </div></section></section>
