deploy: 004ad1fe257f47164ddedebb443015190b9fd32a

--- a/index.html
+++ b/index.html
@@ -14514,6 +14514,12 @@ div.jp-OutputPrompt {
 <p><img src="https://github.com/fawazsiddiqi/LnL-CLustering/blob/main/images/slides/Slide22.png?raw=true" alt="center"></p>
 
 </div>
+</div></section></section><section><section>
+<div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<p><img src="https://github.com/fawazsiddiqi/LnL-CLustering/blob/main/images/slides/Slide23.png?raw=true" alt="center"></p>
+
+</div>
 </div></section></section>
 </div>
 </div>
